--- a/Ejercicios/Ejercicio5/index.html
+++ b/Ejercicios/Ejercicio5/index.html
@@ -21,6 +21,6 @@
         <br>
         <button onclick="calcular()">Calcular</button>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
